# bitmapy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
src/bitmapy/: __init__.py  bitmap.py
tests/: conftest.py  pyproject.toml  test_bitmap.py
