[project]
name = "bitmapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Oliver Parsons", email = "oparsons22@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
